--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "description": "a game built to run on telegram",
   "main": "index.js",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "start": "tsx ./bot.ts",
+    "dev": "tsx watch ./bot.ts"
+  },
   "dependencies": {
-    "grammy": "^1.39.2"
+    "dotenv": "^17.2.3",
+    "grammy": "^1.39.2",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^25.0.3",
     "typescript": "^5.9.3"
   }
 }
