New files from Fly.io Launch

--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for telegram-game-bot
+# fly.toml app configuration file generated for telegram-game on 2026-01-13T12:00:03Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'telegram-game-bot'
+app = 'telegram-game'
 primary_region = 'jnb'
 
 [build]
